# pichi

./: .appveyor.yml  .gitattributes  .gitignore  .justfile  .travis.yml  CMakeLists.txt  LICENSE  README.md  conanfile.py
.azure/: alpine.yml  android.yml  catalina.yml  conan.yml  high_sierra.yml  ios.yml  macos.yml  mojave.yml  ubuntu.yml  vs2017.yml  vs2019.yml  windows.yml
.azure/templates/: build-dep.yml  build.yml  ci.yml  cmake.yml  cross-ci.yml  cross-cmake.yml  docker.yml  macos.yml  vcpkg.yml  vs.yml
.conan/profiles/: android  boost  freebsd  ios  linux  macos  windows
.conan/recipes/b2/: conandata.yml  conanfile.py.diff
.conan/recipes/boost/: conandata.yml
.conan/recipes/boost/patches/: boost_match_config.patch
.conan/recipes/boringssl/: CMakeLists.txt  conandata.yml  conanfile.py
.conan/recipes/botan/: conandata.yml  conanfile.py
.conan/recipes/libmaxminddb/: CMakeLists.txt  conandata.yml  conanfile.py
.conan/recipes/libressl/: conanfile.py  conanfile.py.diff
.conan/recipes/pichi/: conanfile.py
.conan/scripts/: build.sh  conan.sh  export.sh  path.sh
.github/workflows/: android.yml  conan.yml  docker.yml  freebsd.yml  ios.yml  linux.yml  macos.yml  publish.yml  windows.yml
cmake/: AddFoundTarget.cmake  Configure.cmake  FindBoringSSL.cmake  FindBotan.cmake  FindBrotli.cmake  FindMaxmindDB.cmake  FindMbedTLS.cmake  FindRapidJSON.cmake  FindRapidjson.cmake  FindSodium.cmake  Findlibsodium.cmake  GenerateConfig.cmake  GetLibraryDirectories.cmake  HandleDependencies.cmake  ProcessOptions.cmake
cmake/script/: patch_target.sh
cmake/test/: P0702R1.cpp  boost-test-type.cpp  botan-version.cpp  brotli-version.cpp  maxminddb-version.cpp  sodium-type.c
deps-build/: boost.sh  libmaxminddb.cmake  libsodium.cmake
docker/: builder.dockerfile  pichi-bssl.dockerfile  pichi-openssl.dockerfile  pichi.dockerfile
docs/: _config.yml  index.md  integration.md  overview.md  use-cases.md
docs/api/: egress.html  egress.md  index.md  ingress.html  ingress.md  route.html  route.md  rule.html  rule.md
docs/assets/api/: egress.yaml  ingress.yaml  route.yaml  rule.yaml
docs/assets/api/schemas/: addons.yaml  direct.yaml  dual.yaml  endpoint.yaml  error.yaml  reject.yaml  ss.yaml  transparent.yaml  trojan.yaml  tunnel.yaml
docs/getting-started/: build.md  configuration.md  index.md  usage.md
include/: config.h.in  pichi.h
include/boost/asio/: batch.hpp  spawn2.hpp
include/pichi/: asserts.hpp  buffer.hpp  common.hpp  config.hpp.in  exception.hpp  scope_guard.hpp  uri.hpp
include/pichi/actor/: common.hpp  detached.hpp  listener.hpp  router.hpp  server.hpp  session.hpp
include/pichi/adapter/tcp/: adapter.hpp  direct.hpp  dual.hpp  http.hpp  reject.hpp  shadowsocks.hpp  socks5.hpp  transparent.hpp  trojan.hpp  tunnel.hpp
include/pichi/api/: balancer.hpp  egress.hpp  egress_manager.hpp  ingress.hpp  ingress_holder.hpp  ingress_manager.hpp  iterator.hpp  rest.hpp  router.hpp  server.hpp  session.hpp  vos.hpp
include/pichi/common/: adapter.hpp  asserts.hpp  buffer.hpp  config.hpp.in  constants.hpp  coro.hpp  endpoint.hpp  enumerations.hpp  enums.hpp  error.hpp  exception.hpp  literals.hpp  mmdb.hpp  uri.hpp
include/pichi/crypto/: aead.hpp  base64.hpp  brotli.hpp  fingerprint.hpp  hash.hpp  key.hpp  method.hpp  stream.hpp
include/pichi/net/: adapter.hpp  asio.hpp  common.hpp  direct.hpp  helper.hpp  helpers.hpp  http.hpp  reject.hpp  socks5.hpp  spawn.hpp  ssaead.hpp  ssstream.hpp  stream.hpp  test_stream.hpp  tls_stream.hpp  transparent.hpp  trojan.hpp  tunnel.hpp
include/pichi/service/: balancer.hpp  clients.hpp  mmdb.hpp  sentry.hpp
include/pichi/stream/: asio.hpp  completer.hpp  concepts.hpp  helpers.hpp  operation.hpp  shadowsocks.hpp  test.hpp  tls.hpp  traits.hpp  websocket.hpp
include/pichi/test/: socket.hpp
include/pichi/vo/: credential.hpp  egress.hpp  error.hpp  ingress.hpp  iterator.hpp  keys.hpp  messages.hpp  options.hpp  parse.hpp  route.hpp  rule.hpp  to_json.hpp  vos.hpp
schemas/: swagger.yaml
schemas/examples/egress/: direct.json  http.json  https-with-auth.json  https.json  reject-drop.json  reject.json  socks5-with-auth.json  socks5.json  socks5s.json  ss.json  trojan-with-ws.json  trojan.json  vmess-with-tls-ws.json  vmess.json
schemas/examples/ingress/: http.json  https-with-auth.json  https.json  socks5.json  socks5s-with-auth.json  socks5s.json  ss.json  transparent.json  trojan-with-ws.json  trojan.json  tunnel.json  vmess-with-tls-ws.json  vmess.json
server/: CMakeLists.txt  config.h.in  main.cpp  pichi.json.default  run.cpp
src/: CMakeLists.txt  asserts.cpp  exception.cpp  pichi.cpp  uri.cpp
src/actor/: detached.cpp  listener.cpp  router.cpp  server.cpp  session.cpp
src/adapter/tcp/: adapter.cpp  direct.cpp  dual.cpp  http.cpp  reject.cpp  shadowsocks.cpp  socks5.cpp  transparent.cpp  trojan.cpp  tunnel.cpp
src/api/: balancer.cpp  egress.cpp  egress_manager.cpp  ingress.cpp  ingress_holder.cpp  ingress_manager.cpp  rest.cpp  router.cpp  server.cpp  session.cpp  vos.cpp
src/common/: asserts.cpp  endpoint.cpp  error.cpp  exception.cpp  mmdb.cpp  uri.cpp
src/crypto/: aead.cpp  base64.cpp  brotli.cpp  fingerprint.cpp  hash.cpp  key.cpp  stream.cpp
src/net/: adapter.cpp  asio.cpp  direct.cpp  helpers.cpp  http.cpp  reject.cpp  socks5.cpp  spawn.cpp  ssaead.cpp  ssstream.cpp  transparent.cpp  trojan.cpp  tunnel.cpp
src/service/: balancer.cpp  clients.cpp  mmdb.cpp  sentry.cpp
src/stream/: helpers.cpp  shadowsocks.cpp  test.cpp  tls.cpp
src/test/: socket.cpp
src/vo/: credential.cpp  egress.cpp  error.cpp  ingress.cpp  options.cpp  parse.cpp  route.cpp  rule.cpp  to_json.cpp  vos.cpp
test/: CMakeLists.txt  balancer.cpp  base64.cpp  cryptogram.cpp  endpoint.cpp  hash.cpp  hkdf.cpp  hmac.cpp  http.cpp  keys.cpp  method.cpp  net_helpers.cpp  rest_parse.cpp  rest_to_json.cpp  router.cpp  socks5.cpp  ss.cpp  ssstream.cpp  trojan.cpp  uri.cpp  utils.cpp  utils.hpp  vo.cpp  vo.hpp  vo_credential.cpp  vo_egress.cpp  vo_ingress.cpp  vo_options.cpp  vo_route.cpp  vo_rule.cpp  vos.cpp
