set(SERVER pichi)

add_executable(${SERVER} main.cpp run.cpp)
target_include_directories(${SERVER} PRIVATE ${ALL_INCLUDE_DIRS})
target_link_directories(${SERVER} PRIVATE ${COMMON_LIB_DIRS})
target_link_libraries(${SERVER} PRIVATE ${PICHI_LIBRARY}
  ${COMMON_LIBRARIES} ${EXTRA_LIBRARIES}
  ${Boost_PROGRAM_OPTIONS_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
set_target_properties(${SERVER} PROPERTIES
  INSTALL_RPATH ${INSTALL_RPATH}
  MSVC_RUNTIME_LIBRARY ${MSVC_CRT}
  INSTALL_RPATH_USE_LINK_PATH TRUE)
install(TARGETS ${SERVER} DESTINATION bin)
