file(GLOB_RECURSE SRCS *.cpp)

add_library(${PICHI_LIBRARY} ${SRCS})

target_include_directories(${PICHI_LIBRARY} PRIVATE ${ALL_INCLUDE_DIRS})
target_link_directories(${PICHI_LIBRARY} PRIVATE ${COMMON_LIB_DIRS})
target_link_libraries(${PICHI_LIBRARY} PRIVATE ${COMMON_LIBRARIES})

set_target_properties(${PICHI_LIBRARY} PROPERTIES
  OUTPUT_NAME pichi
  WINDOWS_EXPORT_ALL_SYMBOLS ON
  MSVC_RUNTIME_LIBRARY ${MSVC_CRT}
  INSTALL_RPATH ${INSTALL_RPATH}
  INSTALL_RPATH_USE_LINK_PATH TRUE)

if(VERSION)
  set_target_properties(${PICHI_LIBRARY} PROPERTIES VERSION ${VERSION})
endif()

if(INSTALL_DEVEL OR BUILD_SHARED_LIBS)
  install(TARGETS ${PICHI_LIBRARY}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
endif()

if(INSTALL_DEVEL)
  install(DIRECTORY ${CMAKE_SOURCE_DIR}/include/pichi DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
    FILES_MATCHING PATTERN "*.hpp")
  install(DIRECTORY ${CMAKE_SOURCE_DIR}/include/boost DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
  install(FILES ${CMAKE_SOURCE_DIR}/include/pichi.h DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
  install(DIRECTORY ${CMAKE_BINARY_DIR}/include/pichi DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
    FILES_MATCHING PATTERN "*.hpp")
endif()
