set(KEYS_TESTS keys)
set(HASH_TESTS hash)
set(HMAC_TESTS hmac)
set(HKDF_TESTS hkdf)
set(BASE64_TESTS base64)
set(METHOD_TESTS method)
set(CRYPTOGEAM_TESTS cryptogram)
set(REST_TO_JSON_TESTS rest_to_json)
set(REST_PARSE_TESTS rest_parse)
set(ROUTER_TESTS router)
set(URI_TESTS uri)
set(ENDPOINT_TESTS endpoint)
set(SOCKS5_TESTS socks5)
set(HTTP_TESTS http)
set(SS_TESTS ss)
set(BALANCER_TESTS balancer)

link_libraries(${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_CONTEXT_LIBRARY})

configure_file(geo.mmdb ${CMAKE_CURRENT_BINARY_DIR}/geo.mmdb COPYONLY)

set(UTILS_SRC utils.cpp)

add_executable(${KEYS_TESTS} keys.cpp ${UTILS_SRC})
add_executable(${HASH_TESTS} hash.cpp ${UTILS_SRC})
add_executable(${HMAC_TESTS} hmac.cpp ${UTILS_SRC})
add_executable(${HKDF_TESTS} hkdf.cpp ${UTILS_SRC})
add_executable(${BASE64_TESTS} base64.cpp ${UTILS_SRC})
add_executable(${METHOD_TESTS} method.cpp ${UTILS_SRC})
add_executable(${CRYPTOGEAM_TESTS} cryptogram.cpp ${UTILS_SRC})
add_executable(${REST_TO_JSON_TESTS} rest_to_json.cpp ${UTILS_SRC})
add_executable(${REST_PARSE_TESTS} rest_parse.cpp ${UTILS_SRC})
add_executable(${ROUTER_TESTS} router.cpp ${UTILS_SRC})
add_executable(${URI_TESTS} uri.cpp ${UTILS_SRC})
add_executable(${ENDPOINT_TESTS} endpoint.cpp ${UTILS_SRC})
add_executable(${SOCKS5_TESTS} socks5.cpp ${UTILS_SRC})
add_executable(${HTTP_TESTS} http.cpp ${UTILS_SRC})
add_executable(${SS_TESTS} ss.cpp ${UTILS_SRC})
add_executable(${BALANCER_TESTS} balancer.cpp ${UTILS_SRC})

add_test(NAME ${KEYS_TESTS} COMMAND ${KEYS_TESTS})
add_test(NAME ${HASH_TESTS} COMMAND ${HASH_TESTS})
add_test(NAME ${HMAC_TESTS} COMMAND ${HMAC_TESTS})
add_test(NAME ${HKDF_TESTS} COMMAND ${HKDF_TESTS})
add_test(NAME ${BASE64_TESTS} COMMAND ${BASE64_TESTS})
add_test(NAME ${METHOD_TESTS} COMMAND ${METHOD_TESTS})
add_test(NAME ${CRYPTOGEAM_TESTS} COMMAND ${CRYPTOGEAM_TESTS})
add_test(NAME ${REST_TO_JSON_TESTS} COMMAND ${REST_TO_JSON_TESTS})
add_test(NAME ${REST_PARSE_TESTS} COMMAND ${REST_PARSE_TESTS})
add_test(NAME ${ROUTER_TESTS} COMMAND ${ROUTER_TESTS})
add_test(NAME ${URI_TESTS} COMMAND ${URI_TESTS})
add_test(NAME ${ENDPOINT_TESTS} COMMAND ${ENDPOINT_TESTS})
add_test(NAME ${SOCKS5_TESTS} COMMAND ${SOCKS5_TESTS})
add_test(NAME ${HTTP_TESTS} COMMAND ${HTTP_TESTS})
add_test(NAME ${SS_TESTS} COMMAND ${SS_TESTS})
add_test(NAME ${BALANCER_TESTS} COMMAND ${BALANCER_TESTS})
